# kalaNet

./: .gitignore  CMakeLists.txt  README.md  main.cpp  mymainwindow.cpp  mymainwindow.h  mymainwindow.ui
client/: CMakeLists.txt
client/cart/: cart_page.cpp  cart_page.h  cart_page.ui
client/guide/: how_it_works_page.cpp  how_it_works_page.h  how_it_works_page.ui
client/headers/: client_main_window.h  login_window.h
client/login/: login_window.cpp  login_window.h
client/main_window/: client_main_window.cpp  client_main_window.h  client_main_window.ui
client/network/: auth_client.cpp  auth_client.h
client/newAd/: new_ad_page.cpp  new_ad_page.h  new_ad_page.ui
client/profile/: profile_page.cpp  profile_page.h  profile_page.ui
client/shop/: shop_page.cpp  shop_page.h  shop_page.ui
client/signup/: signup_window.cpp  signup_window.h
client/src/: client_main.cpp  client_main_window.cpp  client_main_window.ui  login_window.cpp  login_window.ui  main_client.cpp  signup_window.cpp  signup_window.ui
common/: CMakeLists.txt
common/models/: ad.cpp  ad.h  cart.cpp  cart.h  category.cpp  category.h  transaction.cpp  transaction.h  user.cpp  user.h  wallet.cpp  wallet.h
common/protocol/: ad_create_message.cpp  ad_create_message.h  buy_message.cpp  buy_message.h  command_utils.cpp  command_utils.h  commands.h  error_codes.cpp  error_codes.h  login_message.cpp  login_message.h  message.cpp  message.h  serializer.cpp  serializer.h  signup_message.cpp  signup_message.h
common/utils/: hash_utils.cpp  hash_utils.h  id_generator.h  time_utils.h
docs/: database_schema_versioning.md
scripts/: bootstrap_db.sh  bootstrap_db.sql
server/: CMakeLists.txt  logging_audit_logger.cpp  logging_audit_logger.h  main.cpp
server/ads/: ad_service.cpp  ad_service.h
server/auth/: AuthService.cpp  AuthService.h  auth_service.cpp  auth_service.h  session_service.cpp  session_service.h
server/cart/: cart_service.cpp  cart_service.h
server/headers/: mymainwindow.h  server_main_window.h
server/network/: ClientConnection.cpp  ClientConnection.h  TcpServer.cpp  TcpServer.h  client_connection.cpp  client_connection.h  tcp_server.cpp  tcp_server.h
server/protocol/: RequestDispatcher.cpp  RequestDispatcher.h  request_dispatcher.cpp  request_dispatcher.h
server/repository/: SqliteUserRepository.cpp  SqliteUserRepository.h  UserRepository.h  ad_repository.h  cart_repository.h  sqlite_ad_repository.cpp  sqlite_ad_repository.h  sqlite_cart_repository.cpp  sqlite_cart_repository.h  sqlite_user_repository.cpp  sqlite_user_repository.h  sqlite_wallet_repository.cpp  sqlite_wallet_repository.h  user_repository.h  wallet_repository.h
server/security/: PasswordHasher.cpp  captcha_service.cpp  captcha_service.h  password_hasher.cpp  password_hasher.h
server/src/: hash_utils.cpp  main.cpp  mymainwindow.cpp  mymainwindow.ui  server_main.cpp  server_main_window.cpp  server_main_window.ui
server/ui/: RequestLogFilterProxy.cpp  RequestLogFilterProxy.h  RequestLogModel.h  ServerConsoleWindow.cpp  ServerConsoleWindow.h  ServerConsoleWindow.ui  discount_code_manager_window.cpp  discount_code_manager_window.h  pending_ads_window.cpp  pending_ads_window.h  pending_ads_window.ui  request_log_filter_proxy.cpp  request_log_model.cpp  request_log_model.h  requestlogmodel.cpp  server_console_window.cpp  server_console_window.h  server_console_window.ui  users_information_window.cpp  users_information_window.h
server/wallet/: wallet_service.cpp  wallet_service.h
tests/: CMakeLists.txt  test_services.cpp
